--- a/assets/css/d3Style.css
+++ b/assets/css/d3Style.css
@@ -6,6 +6,7 @@
 
 .active {
   font-weight: bold;
+  font-size: 16;
   fill: #000;
   transition: fill 0.3s ease-out;
   text-anchor: middle;
@@ -13,6 +14,7 @@
 
 .inactive {
   font-weight: lighter;
+  font-size: 14;
   fill: #c9c9c9;
   transition: fill 0.3s ease-out;
   text-anchor: middle;
